--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -41,11 +41,13 @@
                         </div>
 
                         <div id="error-message" class="alert alert-danger d-none" role="alert">
-                            Passwords do not match.
                         </div>
 
-                        <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">Complete Registration</button>
+                        <div class="d-flex gap-2 mt-4">
+                            <a href="javascript:history.back()" class="btn btn-outline-secondary flex-grow-1">
+                                <i class="bi bi-arrow-left"></i> Back
+                            </a>
+                            <button type="submit" class="btn btn-primary flex-grow-1">Complete Registration</button>
                         </div>
                     </form>
                 </div>
