--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -44,11 +44,13 @@
                         </div>
 
                         <div class="d-flex gap-2 mt-4">
-                            <a href="javascript:history.back()" class="btn btn-outline-secondary flex-grow-1">
-                                <i class="bi bi-arrow-left"></i> Back
-                            </a>
                             <button type="submit" class="btn btn-primary flex-grow-1">Complete Registration</button>
                         </div>
+                    </form>
+                    <form action="/register" method="GET">
+                        <button type="submit" class="btn btn-outline-secondary flex-grow-1">
+                            <i class="bi bi-arrow-left"></i> Back
+                        </button>
                     </form>
                 </div>
             </div>
