added cookie logic, made cookie time const

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,7 @@
                                     class="form-control"
                                     id="email"
                                     name="email"
-                                    placeholder="name@example.com"
+                                    placeholder="your E-mail"
                             >
                             <div id="email-error" class="text-danger mt-1 small d-none">
                                 Email must be at least 3 characters before @ and domain must be max 32 characters
@@ -41,7 +41,7 @@
                                     class="form-control"
                                     id="firstName"
                                     name="firstName"
-                                    placeholder="John"
+                                    placeholder="Your name"
                             >
                             <div id="firstName-error" class="text-danger mt-1 small d-none">
                                 First name must contain only letters and be 3-32 characters long
@@ -56,7 +56,7 @@
                                     class="form-control"
                                     id="lastName"
                                     name="lastName"
-                                    placeholder="Doe"
+                                    placeholder="Your last name"
                             >
                             <div id="lastName-error" class="text-danger mt-1 small d-none">
                                 Last name must contain only letters and be 3-32 characters long
