--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -48,7 +48,7 @@
                         </div>
                     </form>
                     <form action="/register" method="GET">
-                        <button type="submit" class="btn btn-outline-secondary flex-grow-1">
+                        <button type="submit" class="btn btn-outline-secondary flex-grow-1 mt-3">
                             <i class="bi bi-arrow-left"></i> Back
                         </button>
                     </form>
