Trying to create chat client side

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -27,7 +27,7 @@
                     </div>
 
                     <!-- Message Input Form -->
-                    <form action="/send-message" method="POST" class="mt-3">
+                    <form action="/messages-api/send-message" method="POST" class="mt-3">
                         <div class="input-group">
                             <input
                                     type="text"
