--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -49,9 +49,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Auto-scroll to bottom of messages -->
-<script>
-    const messagesContainer = document.querySelector('.messages-container');
-    messagesContainer.scrollTop = messagesContainer.scrollHeight;
-</script>
+<script src="/javascripts/messages.js"></script>
+
 </body>
 </html>
