--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('includes/head') %>
 <body class="bg-gradient bg-primary bg-opacity-10">
-<%- include('includes/navigation') %>
+<%- include('includes/login-navigation') %>
 <div class="container mt-5 py-5">
     <div class="row justify-content-center">
         <div class="col-md-8">
